--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "date-fns": "^3.6.0",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
