--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@trpc/server": "next",
     "date-fns": "^3.6.0",
     "geist": "^1.3.0",
+    "jose": "^5.4.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.1",
     "react": "^18.3.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.0",
+    "react-icons": "^5.2.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
