--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "geist": "^1.3.0",
     "jose": "^5.4.0",
@@ -35,6 +36,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
